--- a/postgres-pod.yml
+++ b/postgres-pod.yml
@@ -9,6 +9,6 @@ metadata:
 spec:
   containers:
   - name: postgres
-    images: postgres:9.4
+    image: postgres:9.4
     ports:
     - containerPort: 5432
