--- a/result-app-pod.yml
+++ b/result-app-pod.yml
@@ -9,6 +9,6 @@ metadata:
 spec:
   containers:
   - name: result-app
-    images: dockersamples/examplevotingapp_result
+    image: dockersamples/examplevotingapp_result
     ports:
     - containerPort: 80
