--- a/voting-app-pod.yml
+++ b/voting-app-pod.yml
@@ -9,6 +9,6 @@ metadata:
 spec:
   containers:
   - name: voting-app
-    images: dockersamples/examplevotingapp_vote
+    image: dockersamples/examplevotingapp_vote
     ports:
     - containerPort: 80
